--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Mon Article</title>
+  <title>Mon Article...</title>
 </head>
 <body>
   <h1>Mon Article</h1>
