--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Mon Article...</title>
 </head>
 <body>
-  <h1>Article.pdf</h1>
+  <h1>Article</h1>
+  <iframe src="Article.pdf" width="100%" height="600px"></iframe>
 </body>
 </html>
